<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.FirstActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_add_photo"
        app:layout_constraintBottom_toTopOf="@+id/textbox_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textbox_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/shape_rect_rounded"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textColorHint="#E2E3E4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/tv_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:text="@string/textbox_error"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textbox_name"
        app:layout_constraintTop_toBottomOf="@+id/textbox_name" />

    <TextView
        android:id="@+id/tv_palindrome_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:text="@string/textbox_error"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textbox_input"
        app:layout_constraintTop_toBottomOf="@+id/textbox_input" />

    <EditText
        android:id="@+id/textbox_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/shape_rect_rounded"
        android:hint="@string/palindrome"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textColorHint="#E2E3E4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textbox_name" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btn_check"
        android:textColor="@color/white"
        android:background="@drawable/shape_rect_rounded"
        android:backgroundTint="@color/blue_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textbox_input" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btn_next"
        android:textColor="@color/white"
        android:background="@drawable/shape_rect_rounded"
        android:backgroundTint="@color/blue_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_check" />

</androidx.constraintlayout.widget.ConstraintLayout>